src/tests/NoArrayIndexKey/invalid/case#5/index.jsx
import React from 'react';

const MeuComponente = (props) => {
    return (
        <div>
            {foo.map((item, i) => {
                return React.cloneElement(someChild, {
                    key: i
                })
            })}
        </div>
    );
};

export default MeuComponente;

